--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
    <!-- Site Metas -->
-   <title>Life Care - Responsive HTML5 Multi Page Template</title>
+   <title>DigiPhar</title>
    <meta name="keywords" content="">
-   <meta name="description" content="">
-   <meta name="author" content="">
+   <meta name="description" content="DigiPhar is the best in supplying best grade medical equipments, and is originated in India">
+   <meta name="author" content="Harshit">
    <!-- Site Icons -->
    <link rel="shortcut icon" href="images/fevicon.ico.png" type="image/x-icon" />
    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
@@ -44,11 +44,11 @@
                   <div class="header-info">
                      <div class="info-inner">
                         <span class="icontop"><img src="images/phone-icon.png" alt="#"></span>
-                        <span class="iconcont"><a href="tel:800 123 456">800 123 456</a></span>	
+                        <span class="iconcont"><a href="tel:9810034369">981 003 4369</a></span>	
                      </div>
                      <div class="info-inner">
                         <span class="icontop"><i class="fa fa-envelope" aria-hidden="true"></i></span>
-                        <span class="iconcont"><a data-scroll href="mailto:info@yoursite.com">info@Lifecare.com</a></span>	
+                        <span class="iconcont"><a data-scroll href="mailto:digiphar.inc@gmail.com">digiphar.inc@gmail.com</a></span>	
                      </div>
                      <div class="info-inner">
                         <span class="icontop"><i class="fa fa-clock-o" aria-hidden="true"></i></span>
