--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   <div class="text-contant">
                      <h2>
                         <span class="center"><span class="icon"><img src="images/icon-logo.png" alt="#" /></span></span>
-                        <a href="" class="typewrite" data-period="2000" data-type='[ "Welcome to DigiPhar", "We Care Your Health", "We are Expert!" ]'>
+                        <a href="" class="typewrite" data-period="2000" data-type='[ "Welcome to Digi-Phar", "We Care Your Health", "We are Expert!" ]'>
                         <span class="wrap"></span>
                         </a>
                      </h2>
