--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                      <h2>Clinic Service</h2>
                      <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
                      <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.  </p>
-                     <a href="#services" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">Learn More</a>
+                     <a href="#service" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">Learn More</a>
                   </div>
                   <!-- end messagebox -->
                </div>
@@ -183,6 +183,9 @@
                   </div>
                   <!-- end service -->
                </div>
+			   <div style="text-align:center;">
+					<a href="products.html" style="margin-top:20px;" class="btn btn-light btn-radius btn-brd grd1 effect-1">View All</a>
+			   </div>
             </div>
             <!-- end row -->
          </div>
@@ -628,7 +631,7 @@
                   </div>
                </form>
             </div>
-            <div id="googleMap" style="width:100%;height:450px;"></div>
+            <div id="googleMap" style="width:100%;height:450px;"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15176426.064240016!2d67.30222665964567!3d21.773210467747386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1589274814542!5m2!1sen!2sin" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
          </div>
       </div>
       <footer id="footer" class="footer-area wow fadeIn">
@@ -643,15 +646,15 @@
                <div class="col-md-4">
                   <div class="footer-info padding">
                      <h3>CONTACT US</h3>
-                     <p><i class="fa fa-map-marker" aria-hidden="true"></i> PO Box 16122 Collins Street West Victoria 8007 Australia</p>
-                     <p><i class="fa fa-paper-plane" aria-hidden="true"></i> info@gmail.com</p>
-                     <p><i class="fa fa-phone" aria-hidden="true"></i> (+1) 800 123 456</p>
+                     <p><i class="fa fa-map-marker" aria-hidden="true"></i> Delhi, India</p>
+                     <p><i class="fa fa-paper-plane" aria-hidden="true"></i> digiphar.inc@gmail.com</p>
+                     <p><i class="fa fa-phone" aria-hidden="true"></i> (+91) 981 003 4369</p>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="subcriber-info">
                      <h3>SUBSCRIBE</h3>
-                     <p>Get healthy news, tip and solutions to your problems from our experts.</p>
+                     <p>Get latest news about our new products and services.</p>
                      <div class="subcriber-box">
                         <form id="mc-form" class="mc-form">
                            <div class="newsletter-form">
@@ -681,7 +684,7 @@
             <div class="row">
                <div class="col-md-8">
                   <div class="footer-text">
-                     <p>© 2018 Lifecare. All Rights Reserved.</p>
+                     <p>© Since 2020 DigiPhar. All Rights Reserved.</p>
                   </div>
                </div>
                <div class="col-md-4">
@@ -706,6 +709,6 @@
       <!-- all plugins -->
       <script src="js/custom.js"></script>
       <!-- map -->
-     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNUPWkb4Cjd7Wxo-T4uoUldFjoiUA1fJc&callback=myMap"></script>
+     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNUPWkb4Cjd7Wxo-T4uoUldFjoiUA1fJc&callback=myMap"></script> -->
    </body>
 </html>
