--- a/success.html
+++ b/success.html
@@ -1,20 +1,22 @@
-<body class="thankyou">
-    <div id="stage" class="form-all">
-		<p style="text-align:center;"><img src="images/check-icon.png" alt="" width="128" height="128"></p>
-		<div style="text-align:center;">
-		<h1 style="text-align:center;">Thank You!</h1>
-		<p style="text-align:center;">Your submission has been received.</p>
-		<p style="text-align:center;">&nbsp;</p>
-		<p style="text-align:center;">You will be redirected back to our website!</p>
-		<p style="text-align:center;">Direct Link:&nbsp;<a href="index.html">Go Back</a></p>
+<html>
+	<head>
+		<link rel="shortcut icon" href="images/fevicon.ico.png" type="image/x-icon" />
+	</head>
+	<body class="thankyou">
+		<div id="stage" class="form-all">
+			<p style="text-align:center;"><img src="images/check-icon.png" alt="" width="128" height="128"></p>
+			<div style="text-align:center;">
+				<h1 style="text-align:center;">Thank You!</h1>
+				<p style="text-align:center;">Your submission has been received.</p>
+				<p style="text-align:center;">&nbsp;</p>
+				<p style="text-align:center;">You will be redirected back to our website!</p>
+				<p style="text-align:center;">Direct Link:&nbsp;<a href="index.html">Go Back</a></p>
+			</div>
 		</div>
-		  
-    </div>
-  <script>
-	window.setTimeout(function(){
-        window.location.href = "index.html";
-    }, 3000);
-  </script>
-  
-
-</body>
+	  <script>
+		window.setTimeout(function(){
+			window.location.href = "index.html";
+		}, 3000);
+	  </script>
+	</body>
+</html>
