Categories added at Home page

--- a/index.html
+++ b/index.html
@@ -116,76 +116,70 @@
          <div class="container">
             <div class="heading">
                <span class="icon-logo"><img src="images/icon-logo.png" alt="#"></span>
-               <h2>The Specialist Clinic</h2>
+               <h2>Categories</h2>
             </div>
             <!-- end title -->
             <div class="row">
-               <div class="col-md-6">
-                  <div class="message-box">
-                     <h4>What We Do</h4>
-                     <h2>Clinic Service</h2>
-                     <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
-                     <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.  </p>
-                     <a href="#service" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">Learn More</a>
-                  </div>
-                  <!-- end messagebox -->
-               </div>
-               <!-- end col -->
-               <div class="col-md-6">
-                  <div class="post-media wow fadeIn">
-                     <img src="images/about_03.jpg" alt="" class="img-responsive">
-                     <a href="http://www.youtube.com/watch?v=nrJtHemSPW4" data-rel="prettyPhoto[gal]" class="playbutton"><i class="flaticon-play-button"></i></a>
-                  </div>
-                  <!-- end media -->
-               </div>
-               <!-- end col -->
-            </div>
-            <!-- end row -->
-            <hr class="hr1">
-            <div class="row">
-               <div class="col-md-3 col-sm-6 col-xs-12">
+               <div class="col-md-2 col-sm-3 col-xs-6">
                   <div class="service-widget">
                      <div class="post-media wow fadeIn">
-                        <a href="images/clinic_01.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
-                        <img src="images/clinic_01.jpg" alt="" class="img-responsive">
+                        <a href="categories.html#medical-devices" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                        <img src="images/categories/medical-devices.png" alt="" class="img-responsive cat">
                      </div>
-                     <h3>Digital Control Center</h3>
+                     <h3 style="height:60px;">Medical Devices</h3>
                   </div>
                   <!-- end service -->
                </div>
-               <div class="col-md-3 col-sm-6 col-xs-12">
+               <div class="col-md-2 col-sm-3 col-xs-6">
                   <div class="service-widget">
                      <div class="post-media wow fadeIn">
-                        <a href="images/clinic_02.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
-                        <img src="images/clinic_02.jpg" alt="" class="img-responsive">
+                        <a href="categories.html#medical-consumables" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                        <img src="images/categories/medical-consumables.png" alt="" class="img-responsive">
                      </div>
-                     <h3>Hygienic Operating Room</h3>
+                     <h3 style="height:60px;">Medical Consumables</h3>
                   </div>
                   <!-- end service -->
                </div>
-               <div class="col-md-3 col-sm-6 col-xs-12">
+               <div class="col-md-2 col-sm-3 col-xs-6">
                   <div class="service-widget">
                      <div class="post-media wow fadeIn">
-                        <a href="images/clinic_03.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
-                        <img src="images/clinic_03.jpg" alt="" class="img-responsive">
+                        <a href="categories.html#medical-aid" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                        <img src="images/categories/medical-aid.png" alt="" class="img-responsive">
                      </div>
-                     <h3>Specialist Physicians</h3>
+                     <h3 style="height:60px;">Medical Aids</h3>
                   </div>
                   <!-- end service -->
                </div>
-               <div class="col-md-3 col-sm-6 col-xs-12">
+               <div class="col-md-2 col-sm-3 col-xs-6">
                   <div class="service-widget">
                      <div class="post-media wow fadeIn">
-                        <a href="images/clinic_01.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
-                        <img src="images/clinic_01.jpg" alt="" class="img-responsive">
+                        <a href="categories.html#hospital-furnitures" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                        <img src="images/categories/hospital-furnitures.png" alt="" class="img-responsive">
                      </div>
-                     <h3>Digital Control Center</h3>
+                     <h3 style="height:60px;">Hospital Furnitures</h3>
                   </div>
                   <!-- end service -->
                </div>
-			   <div style="text-align:center;">
-					<a href="products.html" style="margin-top:20px;" class="btn btn-light btn-radius btn-brd grd1 effect-1">View All</a>
-			   </div>
+               <div class="col-md-2 col-sm-3 col-xs-6">
+                  <div class="service-widget">
+                     <div class="post-media wow fadeIn">
+                        <a href="categories.html#medical-equipment" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                        <img src="images/categories/medical-equipment.png" alt="" class="img-responsive">
+                     </div>
+                     <h3 style="height:60px;">Medical Equipments</h3>
+                  </div>
+                  <!-- end service -->
+               </div>
+			   <div class="col-md-2 col-sm-3 col-xs-6">
+                  <div class="service-widget">
+                     <div class="post-media wow fadeIn">
+                        <a href="categories.html" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                        <img src="images/categories/all.jpg" alt="" class="img-responsive">
+                     </div>
+                     <h3 style="height:60px;"><a href="categories.html"><button class="btn btn-warning">View All</button></a></h3>
+                  </div>
+                  <!-- end service -->
+               </div>
             </div>
             <!-- end row -->
          </div>
@@ -604,27 +598,27 @@
                   <div class="row">
                      <div class="col-md-6">
                         <div class="form-group in_name">
-						   <input type="text" id="input_1" name="q1_typeA" data-type="input-textbox" class="form-control form-textbox validate[required]" style="color:#e4e4e4;" data-component="textbox" aria-labelledby="label_1" placeholder="Name" required="required" >
+						   <input type="text" id="input_1" name="q1_typeA" data-type="input-textbox" class="form-control" style="color:#e4e4e4;" data-component="textbox" aria-labelledby="label_1" placeholder="Name" required="required" >
                         </div>
                      </div>
                      <div class="col-md-6">
                         <div class="form-group in_email">
-						   <input type="text" id="input_2" name="q2_typeA2" data-type="input-textbox" style="color:#e4e4e4;" class="form-control form-textbox validate[required, Email]" data-component="textbox" placeholder="E-mail" aria-labelledby="label_2" required="required" >
+						   <input type="text" id="input_2" name="q2_typeA2" data-type="input-textbox" style="color:#e4e4e4;" class="form-control" data-component="textbox" placeholder="E-mail" aria-labelledby="label_2" required="required" >
                         </div>
                      </div>
                      <div class="col-md-6">
                         <div class="form-group in_email">
-						<input type="text" id="input_3" name="q3_typeA3" style="color:#e4e4e4;" data-type="input-textbox" class="form-control form-textbox validate[Numeric]" data-component="textbox" placeholder="Phone" aria-labelledby="label_3" >
+						<input type="text" id="input_3" name="q3_typeA3" style="color:#e4e4e4;" data-type="input-textbox" class="form-control" data-component="textbox" placeholder="Phone" aria-labelledby="label_3" >
                         </div>
                      </div>
                      <div class="col-md-6">
                         <div class="form-group in_email">
-							<input type="text" style="color:#e4e4e4;" id="input_4" name="q4_subject" data-type="input-textbox" class="form-control form-textbox"data-component="textbox" placeholder="Subject" aria-labelledby="label_4">
+							<input type="text" style="color:#e4e4e4;" id="input_4" name="q4_subject" data-type="input-textbox" class="form-control"data-component="textbox" placeholder="Subject" aria-labelledby="label_4">
                         </div>
                      </div>
                      <div class="col-md-12">
                         <div class="form-group in_message"> 
-						   <textarea id="input_5" class="form-control form-textarea validate[required]" name="q5_message" style="color:#e4e4e4;" rows="5" data-component="textarea" required="required" placeholder="Message" aria-labelledby="label_5"></textarea>
+						   <textarea id="input_5" class="form-control" name="q5_message" style="color:#e4e4e4;" rows="5" data-component="textarea" required="required" placeholder="Message" aria-labelledby="label_5"></textarea>
                         </div>
                         <div class="actions">
                            <input type="submit" value="Send Message" name="submit" id="submitButton" class="btn small" title="Submit Your Message!">
