--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
             </div>
 			<center>
 			<!-- <marquee onMouseOver="this.stop();" onMouseOut="this.start();" behavior="alternate" direction="left"> -->
-				<img src="images/certifications/ce.png">
-				<img src="images/certifications/iso.png">
-				<img src="images/certifications/who.png">
-				<img src="images/certifications/drdo.png">
-				<img src="images/certifications/sitra.png">
+				<img src="images/certifications/ce.png" alt="CE-Certified">
+				<img src="images/certifications/iso.png" alt="ISO-Certified">
+				<img src="images/certifications/who.png" alt="WHO-GMP Certified">
+				<img src="images/certifications/drdo.png" alt="DRDO Tested">
+				<img src="images/certifications/sitra.png" alt="Sitra Tested">
 			<!-- </marquee> -->
 			</center>
 		 </div>
