--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 		<div class="heading">
 			<h2>Associated Brands</h2>
 		</div>
-	  <div class="section pr wow fadeIn" style="background-image:url('images/price-bg.png');">
+	  <div class="section pr wow fadeIn" style="background-image:url('images/price-bg.png'); background-attachment:fixed;">
          <div class="container brnd">
 			<marquee onMouseOver="this.stop();" onMouseOut="this.start();" behavior="alternate" direction="left">
 				<img src="images/brands/3m.png">
