--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <header>
          <div class="header-top wow fadeIn">
             <div class="container">
-               <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="image"></a>
+               <a class="navbar-brand" href="index.html" style="padding: 10px; 10px"><img src="images/logo.png" alt="image"></a>
                <div class="right-header">
                   <div class="header-info">
                      <div class="info-inner">
@@ -48,11 +48,7 @@
                      </div>
                      <div class="info-inner">
                         <span class="icontop"><i class="fa fa-envelope" aria-hidden="true"></i></span>
-                        <span class="iconcont"><a data-scroll href="mailto:digiphar.inc@gmail.com">digiphar.inc@gmail.com</a></span>	
-                     </div>
-                     <div class="info-inner">
-                        <span class="icontop"><i class="fa fa-clock-o" aria-hidden="true"></i></span>
-                        <span class="iconcont"><a data-scroll href="#">Daily: 7:00am - 8:00pm</a></span>	
+                        <span class="iconcont"><a href="mailto:digiphar.inc@gmail.com">digiphar.inc@gmail.com</a></span>	
                      </div>
                   </div>
                </div>
@@ -473,8 +469,8 @@
                   <div class="footer-info padding">
                      <h3>CONTACT US</h3>
                      <p><i class="fa fa-map-marker" aria-hidden="true"></i> Delhi, India</p>
-                     <p><i class="fa fa-paper-plane" aria-hidden="true"></i> digiphar.inc@gmail.com</p>
-                     <p><i class="fa fa-phone" aria-hidden="true"></i> (+91) 981 003 4369</p>
+                     <p><a href="mailto:digiphar.inc@gmail.com"><i class="fa fa-paper-plane" aria-hidden="true"></i> digiphar.inc@gmail.com</a></p>
+                     <p><a href="tel:9810034369"><i class="fa fa-phone" aria-hidden="true"></i> (+91) 981 003 4369</a></p>
                   </div>
                </div>
                <div class="col-md-4">
