Header padding removed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <header>
          <div class="header-top wow fadeIn">
             <div class="container">
-               <a class="navbar-brand" href="index.html" style="padding: 10px; 10px"><img src="images/logo.png" alt="image"></a>
+               <a class="navbar-brand" href="index.html" style="padding: 8px 10px"><img src="images/logo.png" alt="image"></a>
                <div class="right-header">
                   <div class="header-info">
                      <div class="info-inner">
