--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                   <div id="navbar" class="navbar-collapse collapse">
                      <ul class="nav navbar-nav">
                         <li><a class="active" href="index.html">Home</a></li>
-                        <li><a data-scroll href="#categories">Categories</a></li>
+                        <li><a data-scroll href="categories.html">Categories</a></li>
                         <li><a data-scroll href="#enquire">Enquire</a></li>
 						<li><a data-scroll href="#testimonials">Testimonials</a></li>
                         <li><a data-scroll href="#getintouch">Contact Us</a></li>
@@ -86,6 +86,12 @@
             </div>
          </div>
       </header>
+	  
+	  
+	  <!-- HEADER END -->
+	  
+	  
+	  
       <div id="home" class="parallax first-section wow fadeIn" data-stellar-background-ratio="0.4" style="background-image:url('images/slider-bg.png');">
          <div class="container">
             <div class="row">
@@ -413,7 +419,6 @@
       <div id="getintouch" class="section wb wow fadeIn" style="padding-bottom:0;">
          <div class="container">
             <div class="heading">
-               <span class="icon-logo"><img src="images/icon-logo.png" alt="#"></span>
                <h2>Get in Touch</h2>
             </div>
          </div>
@@ -456,6 +461,14 @@
             <div id="googleMap" style="width:100%;height:450px;"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15176426.064240016!2d67.30222665964567!3d21.773210467747386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1589274814542!5m2!1sen!2sin" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
          </div>
       </div>
+	  
+	  
+	  
+	  
+	  
+	  <!-- FOOTER START -->
+	  
+	  
       <footer id="footer" class="footer-area wow fadeIn">
          <div class="container">
             <div class="row">
