--- a/categories.html
+++ b/categories.html
@@ -9,7 +9,7 @@
    <!-- Site Metas -->
    <title>DigiPhar</title>
    <meta name="keywords" content="">
-   <meta name="description" content="DigiPhar is the best in supplying best grade medical equipments, and is originated in India">
+   <meta name="description" content="View All Products and Categories from DigiPhar. Special Products for COVID-19.">
    <meta name="author" content="Harshit">
    <!-- Site Icons -->
    <link rel="shortcut icon" href="images/fevicon.ico.png" type="image/x-icon" />
@@ -36,10 +36,16 @@
          <img class="preloader" src="images/loaders/heart-loading2.gif" alt="">
       </div>
       <!-- END LOADER -->
+	  
+	  
+	  <!-- HEADER START -->
+	  
+	  
+	  
       <header>
          <div class="header-top wow fadeIn">
             <div class="container">
-               <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="image"></a>
+               <a class="navbar-brand" href="index.html" style="padding: 8px 10px"><img src="images/logo.png" alt="image"></a>
                <div class="right-header">
                   <div class="header-info">
                      <div class="info-inner">
@@ -48,11 +54,7 @@
                      </div>
                      <div class="info-inner">
                         <span class="icontop"><i class="fa fa-envelope" aria-hidden="true"></i></span>
-                        <span class="iconcont"><a data-scroll href="mailto:digiphar.inc@gmail.com">digiphar.inc@gmail.com</a></span>	
-                     </div>
-                     <div class="info-inner">
-                        <span class="icontop"><i class="fa fa-clock-o" aria-hidden="true"></i></span>
-                        <span class="iconcont"><a data-scroll href="#">Daily: 7:00am - 8:00pm</a></span>	
+                        <span class="iconcont"><a href="mailto:digiphar.inc@gmail.com">digiphar.inc@gmail.com</a></span>	
                      </div>
                   </div>
                </div>
@@ -67,13 +69,11 @@
 				  
                   <div id="navbar" class="navbar-collapse collapse">
                      <ul class="nav navbar-nav">
-                        <li><a class="active" href="index.html">Home</a></li>
-                        <li><a data-scroll href="#about">About us</a></li>
-                        <li><a data-scroll href="#service">Services</a></li>
-                        <li><a data-scroll href="#doctors">Doctors</a></li>
-                        <li><a data-scroll href="#price">Price</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a data-scroll class="active" href="categories.html">Categories</a></li>
+                        <li><a data-scroll href="#enquire">Enquire</a></li>
 						<li><a data-scroll href="#testimonials">Testimonials</a></li>
-                        <li><a data-scroll href="#getintouch">Contact</a></li>
+                        <li><a data-scroll href="#getintouch">Contact Us</a></li>
                      </ul>
                   </div>
                </nav>
@@ -92,6 +92,12 @@
             </div>
          </div>
       </header>
+	  
+	  
+	  <!-- HEADER END -->
+	  
+	  
+	  
 	  
       <div id="home" class="parallax first-section wow fadeIn" data-stellar-background-ratio="0.4" style="height:200px;background-image:url('images/service-bg.png');">
          <div class="container">
