--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <!-- Basic -->
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="google-site-verification" content="xwENYj-Mtjbk7HCc1lY9pxqTlAt-uwlRJ2oJYmUJ42k" />
    <!-- Mobile Metas -->
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
