--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
    <!-- Site Metas -->
    <title>DigiPhar</title>
-   <meta name="keywords" content="">
-   <meta name="description" content="DigiPhar is the best in supplying best grade medical equipments, and is originated in India. Special Products for COVID-19.">
+   <meta name="keywords" content="Best Digital and Medical store">
+   <meta name="description" content="DigiPhar is the best in supplying high grade medical equipments, and is originated in India. Special Products for COVID-19.">
    <meta name="author" content="Harshit">
    <!-- Site Icons -->
    <link rel="shortcut icon" href="images/fevicon.ico.png" type="image/x-icon" />
@@ -544,7 +544,5 @@
       <script src="js/all.js"></script>
       <!-- all plugins -->
       <script src="js/custom.js"></script>
-      <!-- map -->
-     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNUPWkb4Cjd7Wxo-T4uoUldFjoiUA1fJc&callback=myMap"></script> -->
    </body>
 </html>
