--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
 	  
 	  
 	  
-      <div id="home" class="parallax first-section wow fadeIn" data-stellar-background-ratio="0.4" style="background-image:url('images/slider-bg.png');">
+      <div id="home" class="parallax first-section wow fadeIn" data-stellar-background-ratio="0.4" style="background-image:url('images/slider-bg.jpg');">
          <div class="container">
             <div class="row">
                <div class="col-md-12 col-sm-12">
                   <div class="text-contant">
                      <h2>
                         <span class="center"><span class="icon"><img src="images/icon-logo.png" alt="#" /></span></span>
-                        <a href="#" style="background:#1d86df; color:white; background-image:linear-gradient(to bottom right, #1d86df, #39b49a); height:70px;padding-top:10px;" class="typewrite" data-period="2000" data-type='[ "Welcome to DigiPhar", "We Care Your Health", "We are Expert!" ]'>
+                        <a href="#" style="background:rgba(29, 134, 223, 0.6); color:white; height:70px;padding-top:10px;" class="typewrite" data-period="2000" data-type='[ "Welcome to DigiPhar", "We Care Your Health", "We are Expert!" ]'>
                         <span class="wrap"></span>
                         </a>
                      </h2>
@@ -213,15 +213,17 @@
             <div class="heading">
                <h2>Certifications & Standards</h2>
             </div>
-			<center>
-			<!-- <marquee onMouseOver="this.stop();" onMouseOut="this.start();" behavior="alternate" direction="left"> -->
-				<img src="images/certifications/ce.png" alt="CE-Certified">
-				<img src="images/certifications/iso.png" alt="ISO-Certified">
-				<img src="images/certifications/who.png" alt="WHO-GMP Certified">
-				<img src="images/certifications/drdo.png" alt="DRDO Tested">
-				<img src="images/certifications/sitra.png" alt="Sitra Tested">
-			<!-- </marquee> -->
-			</center>
+			<div class="row center">
+				<center>
+				<!-- <marquee onMouseOver="this.stop();" onMouseOut="this.start();" behavior="alternate" direction="left"> -->
+					<img class="col-md-2" src="images/certifications/ce.png" alt="CE-Certified">
+					<img class="col-md-2" src="images/certifications/iso.png" alt="ISO-Certified">
+					<img class="col-md-2" src="images/certifications/who.png" alt="WHO-GMP Certified">
+					<img class="col-md-2" src="images/certifications/drdo.png" alt="DRDO Tested">
+					<img class="col-md-2" src="images/certifications/sitra.png" alt="Sitra Tested">
+				<!-- </marquee> -->
+				</center>
+			</div>
 		 </div>
 		</div>
 	  
